public/stylesheets/practices.css
#practices {

}

#practices .practice {

}

.practice h3 {

}

.practice p.time {
  display: inline;
}

#quicksearch {

}
#quicksearch input {
  padding-left: 15px;
  margin-left: 5px;
  margin-top: 5px;
  margin-bottom: 5px;
  width: 85%;
}

#practice_editor {
  padding-left: 190px;
  padding-right: 8px;
}

#sidebar {
  width: 190px;
  right: 190px;
  float: left;
  position: relative;
  margin-right: -100%;
}

#techniques_accordion .techniques-viewport {
  padding: 0;
  overflow: auto;
}

#techniques_accordion .techniques-viewport ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

#techniques_accordion .techniques-viewport ul li {
}

#techniques_accordion .practice_technique {
  margin-top: 10px;
}

.technique {
  cursor: move;
  border: 1px solid black;
  width: 150px;
  margin: 10px;
  background: white;
  text-align: center;
}

.technique.ui-draggable-dragging{
  display: table;
}

#technique_dialog {
  text-align: center;
  overflow: hidden;
}

#technique_dialog img {
  border: 1px solid black;
}

#technique_dialog p {
  text-align: left;
}

.part-techniques .practice_technique {
  cursor: move;
  border: 1px solid black;
  position: relative;
  width: 100px;
  height: 100px;
}

#practice_parts {
  width: 100%;
  margin-left: 5px;
  float: left;
  position: relative;
  vertical-align: top;
  overflow: auto;
  background: none;
}

.gecko .ui-tabs .ui-tabs-nav li {
    top: 2px;
}

#practice_parts.ui-tabs {
  padding: 0;
}

#practice_parts.ui-tabs .ui-tabs-nav li a {
  padding: 0.3em 0.3em 0.3em 0.5em;
}

#practice_parts.ui-widget-content {
  border: none;
}

#practice_parts .ui-state-active {
  border: #ccc solid 1px;
}

#practice_parts .ui-tabs-panel {
  border: #ccc solid 1px;
  background: #fff;
}

.gecko #practice_parts .ui-tabs-panel, .ie #practice_parts .ui-tabs-panel {
  margin-top: 1px;
}

#practice_parts .ui-widget-header {
  background: none;
  border: none;
  padding: 0;
}

#practice_parts #add_anga {

}

.part-techniques {
    overflow: auto;
}

#practice_parts ul {
    height: 28px;
}

#practice_parts li .ui-icon-close {
    float: left;
    margin-top: 0.4em;
    margin-right: 0.3em;
    margin-left: 0;
    margin-bottom: 0;
    cursor: pointer;
}

#practice_parts .ui-tabs-nav li a {
    padding-top: 4px;
    padding-bottom: 4px;
}

#practice_parts button {
  margin-top: 1px;
  height: 27px;
  border-bottom: 0;
}

#practice_parts button .ui-button-text {
    padding:0.4em 2.1em 0.4em 1.1em;
}

#practice_parts button .ui-icon {
    right: 2px;
    margin-top: -7px;
}

.part-techniques .practice_technique, #associated_techniques .technique, .associated_techniques .technique {
  width: 150px;
  height: 150px;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-left: 5px;
  float: left;
  text-align: center;
  overflow: hidden;
}

.practice_technique h3, .technique h3 {
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 15px;
  margin: 5px;
}

.practice_technique h3.long, .technique h3.long {
  font-size: 90%;
}

.part-techniques .practice_technique.working {
  background: yellow;
}

.part-techniques .practice_technique .back {
  display: none;
}

.part-techniques .practice_technique .associated_techniques {
  padding-left: 20px;
}

.associated-technique-actions {
  display: none;
}

.part-techniques .practice_technique:hover .back {
  display: inherit;
}

.part-techniques .practice_technique:hover .front {
  display: none;
}

.associated-technique:hover .associated-technique-actions {
  display: inline-block;
}

.associated-technique-actions span {
  display: inline-block;
  vertical-align: top;
}


.practice_technique .actions {
  margin-top:5px;
  padding:0;
}

.practice_technique .actions li{
  display: inline-block;
}

span.jeditable:hover {
  border: 1px solid black;
}

span.jeditable.editing:hover {
  border: 0;
}

span.jeditable input, span.jeditable textarea {
  width: 350px;
}

span#jeditable_delay input {
  width: 20px;
}

span#jeditable_description input {
  width: 90%;
}

.multiple.field {
  margin: 0;
}

.time.multiple.field .field {
  width: 32.5%;
  display: inline-block;
}

.time.multiple.field .field input[type = text] {
  width: 90%;
}

.compensate.field input {
  margin-left:36%;
}

.field.observations textarea {
  width: 99%;
  height: 100px;
}

.field.description textarea {
    width: 99%;
    height: 100px;
}

#controls {
  line-height: 2.5em;
  margin: 5px 0;
  text-align: center;
  border: 1px solid #CCC;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  display: block;
  position: relative;
  background: #fff;
}

#controls #main_controls {
  display: inline-block;
  position: absolute;
}

#main_controls {
  margin-left: 5px;
}

#main_controls a {
  vertical-align: middle;
}

#play_controls {
  text-align: center;
  margin: 0;
}

#play_controls a {
  vertical-align: middle;
}

#play_controls li {
    vertical-align: middle;
}

#play_controls .ui-icon {
  background-image: url(/stylesheets/ui-lightness/images/ui-icons_888888_256x240.png);
}

#countdown {
    display: inline-block;
    margin-left: 5px;
    margin-right: 5px;
    font-size: 4em;
    vertical-align: middle;
    line-height: 1.2em;
}

#slideshow_practice_techniques {
  display: block;
  margin: 10px auto 0px;
}

.slideshow_practice_technique {
}

.current_technique {
  display: inline-block;
  float: left;
  margin: 0;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  background: #fff;
  border: 1px solid #CCC;
}

#main_panel p {
  line-height: 315px;
}

#main_panel {
  display: inline-block;
  float: left;
  width: 370px;
  text-align: center;
  border-right: 1px solid #CCC;
  height: 460px;
}

#main_panel h2 {
    background: none repeat scroll 0 0 white;
    width: 370px;
}

#main_panel img {
    margin-top: -5px;
    vertical-align: middle;
}

#info_panel {
  display: inline-block;
  float: left;
  height: 460px;
  width: 340px;
  padding-left: 10px;
}

#info_panel .associated_techniques {
  height: 167px;
  overflow-y: auto;
  padding-left: 10px;
}

#info_panel .associated_techniques .technique {
  display: inline-block;
  list-style: none;
  text-align: center;
  border-color: #CCC;
  cursor: default;
}

.next_technique {
  display: inline-block;
  float: right;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  background: #fff;
  border: 1px solid #CCC;
  height: 200px;
  width: 200px;
  margin-top: 125px;
  margin-left:15px;
  text-align: center;
}

.next_technique p {
  margin: 0;
  line-height: 70px;
}

.next_technique h3 {
}

.next_technique img {
  vertical-align: middle;
}

div[aria-labelledby = 'ui-dialog-title-edit_practice_dialog'] .ui-dialog-titlebar {
  display: none;
}

div[aria-labelledby = 'ui-dialog-title-edit_practice_dialog'] .ui-dialog-content, div[aria-labelledby = 'ui-dialog-title-edit_practice_dialog'] .ui-tabs {
  padding:0;
}

#edit_practice_dialog .ui-tabs-nav .ui-state-active {
  background: #EEE url(/stylesheets/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) repeat-x 20% 10%;
}

#practice-ui-tab-dialog-close {
  position:absolute; right:0; top:20px;
}

#practice-ui-tab-dialog-close a {
  float:none; padding:0;
}

.practice_technique_time {
  position: absolute;
  bottom: 0;
  right: 2px;
}

#technique_select_box {
    overflow-x: scroll;
    overflow-y: hidden;
    height: 190px;
    white-space: nowrap;
}

#technique_select_box .technique {
    display: inline-block;
    white-space: normal;
    height:150px;
    overflow: hidden;
    vertical-align: middle;
    cursor: pointer;
}

#technique_select_box .technique.selected {
  border: 2px solid black;
}

.delete-share {
  display: inline-block;
  float: right;
}

#asana_techniques_viewport select {
    width: 153px;
    margin-left: 10px;
}

#info_panel .description {
    height: 100px;
    overflow-y: auto;
}

#info_panel .observations {
    height: 100px;
    overflow-y: auto;
}

#info_panel h3 {
    margin-bottom: 5px;
    margin-top: 8px;
}

div[aria-labelledby = 'ui-dialog-title-edit_practice_technique_dialog'] .ui-dialog-titlebar {
  display: none;
}

div[aria-labelledby = 'ui-dialog-title-edit_practice_technique_dialog'] .ui-dialog-content, div[aria-labelledby = 'ui-dialog-title-edit_practice_technique_dialog'] .ui-tabs {
  padding:0;
}

#edit_practice_technique_dialog .ui-tabs-nav .ui-state-active {
  background: #EEE url(/stylesheets/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) repeat-x 20% 10%;
}

#associated_techniques .technique {
    cursor: default;
}

#techniques_accordion .ui-state-disabled.ui-accordion-header, #techniques_accordion .ui-widget-content .ui-state-disabled.ui-accordion-content.ui-accordion-content-active {
    opacity: 0.35;
}

#auto_delete_alert {
    margin-top: 10px;
}

